--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:theme="@style/Theme.ClassProject">
         <activity android:name=".InformationInquiryActivity" />
         <activity android:name=".MainMenuActivity" />
-        <activity android:name=".JoinActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".LoginSuccess" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
